--- a/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/app/locale/en_US/Sirateck_Lemonway.csv
@@ -1,9 +1,18 @@
+"<a href="""%s""">Please check your module configuration</a> or create your wallet in <a href="""%s""">Lemonway BO</a>.","<a href="""%s""">Please check your module configuration</a> or create your wallet in <a href="""%s""">Lemonway BO</a>."
 "",""
 "Action","Action"
 "Add Wallet","Add Wallet"
+"Allow One clic","Allow One clic"
+"Amount to pay","Amount to pay"
 "An error occurred while updating the wallets.","An error occurred while updating the wallets."
+"An error occurred. Please contact support.","An error occurred. Please contact support."
 "Are you sure?","Are you sure?"
+"Auto commission","Auto commission"
+"Balance","Balance"
 "Birth country","Birth country"
+"Call requests in test API Endpoint","Call requests in test API Endpoint"
+"Card ID one clic","Card ID one clic"
+"Css url","Css url"
 "CSV","CSV"
 "Change Is Admin","Change Is Admin"
 "Change Is One time customer","Change Is One time customer"
@@ -13,6 +22,7 @@
 "Change status","Change status"
 "City of Birth","City of Birth"
 "City","City"
+"Commission amount","Commission amount"
 "Company ID number","Company ID number"
 "Company description","Company description"
 "Company name","Company name"
@@ -20,43 +30,72 @@
 "Could not find wallet to delete.","Could not find wallet to delete."
 "Country","Country"
 "Created at","Created at"
+"Current balance","Current balance"
 "Customer ID","Customer ID"
+"Customer not found!","Customer not found!"
 "Delete Wallet","Delete Wallet"
 "Delete","Delete"
 "Disabled","Disabled"
+"Display checkbox in frontend form","Display checkbox in frontend form"
 "Dob","Dob"
 "Edit Wallet '%s'","Edit Wallet '%s'"
 "Edit","Edit"
 "Email","Email"
+"Email related to your wallet. It's used for retrieve wallet's informations.","Email related to your wallet. It's used for retrieve wallet's informations.
 "Enabled","Enabled"
+"Enable debug log","Enable debug log"
+"Enable test mode","Enable test mode"
 "Error saving wallet","Error saving wallet"
 "Excel","Excel"
 "Firstname","Firstname"
 "Home","Home"
+"Iban informations","Iban informations"
 "Id","Id"
+"If <b>No</b> <u>you must fill field Commission amount below</u>.","If <b>No</b> <u>you must fill field Commission amount below</u>."
 "Is Admin","Is Admin"
 "Is One time customer","Is One time customer"
 "Is company","Is company"
+"Is Blocked","Is Blocked"
 "Is debtor","Is debtor"
 "Is default","Is default"
+"It's the wallet where your payments are credited.You must to create it in BO Lemonway","It's the wallet where your payments are credited.You must to create it in BO Lemonway"
 "Lastname","Lastname"
 "Lemonway ID","Lemonway ID"
+"Lemonway account configuration","Lemonway account configuration"
+"Lemonway payment","Lemonway payment"
+"Lemonway payment method (webkit)","Lemonway payment method (webkit)"
+"Log all queries to and from lemonway API","Log all queries to and from lemonway API"
 "Mobile Number","Mobile Number"
+"Money In with Card Id for order #%s","Money In with Card Id for order #%s"
+"MoneyOut","Money out"
+"Money out","Money out"
+"Moneyout from Magento module","Moneyout from Magento module"
 "Nationality","Nationality"
 "No","No"
 "None","None"
+"Not use recorded card data","Not use recorded card data"
+"Owner name","Owner name"
+"Owner email","Owner email"
+"Pay","Pay"
 "Payer or beneficiary","Payer or beneficiary"
+"Payment informations","Payment informations"
 "Phone Number","Phone Number"
+"Please create at least one for wallet <b>%s</b> in <a href="%s">Lemonway BO </a>."
 "Please select wallets to delete.","Please select wallets to delete."
 "Please select wallets.","Please select wallets."
 "Postcode","Postcode"
 "Prefix","Prefix"
+"Production Api login","Production Api login"
+"Production Api password","Production Api password"
+"Save your card data for a next buy.","Save your card data for a next buy."
 "Reset","Reset"
 "Save And Continue Edit","Save And Continue Edit"
+"Save new card data","Save new card data"
 "Save Wallet","Save Wallet"
 "Status","Status"
 "Store views","Store views"
 "Street","Street"
+"Title","Title"
 "The wallets has been deleted.","The wallets has been deleted."
 "There was a problem saving the wallet.","There was a problem saving the wallet."
 "There was an error deleting wallet.","There was an error deleting wallet."
@@ -69,12 +108,23 @@
 "Total of %d wallets were successfully updated.","Total of %d wallets were successfully updated."
 "Unable to find wallet to save.","Unable to find wallet to save."
 "Updated at","Updated at"
+"Use my recorded card","Use my recorded card"
 "WYSIWYG Editor","WYSIWYG Editor"
+"Wallet informations","Wallet informations"
 "Wallet ID","Wallet ID"
 "Wallet was saved","Wallet was saved"
 "Wallet was successfully deleted.","Wallet was successfully deleted."
 "Wallet was successfully saved","Wallet was successfully saved"
 "Wallet","Wallet"
 "Wallets","Wallets"
+"We can't retrieve your wallet!","We can't retrieve your wallet!"
 "XML","XML"
-"Yes","Yes"
+"Yes","Yes"
+"You can't paid amount upper of your balance amount: %s","You can't paid amount upper of your balance amount: %s"
+"You don't have any Iban!","You don't have any Iban!"
+"You paid %s to your Iban %s from your wallet <b>%s</b>","You paid %s to your Iban %s from your wallet <b>%s</b>"
+"You will be redirect to payment page after you submit order.","You will be redirect to payment page after you submit order."
+"Your order will be paid with your registered card after you submit order","Your order will be paid with your registered card after you submit order"
+"Your wallet email","Your wallet email"
+"Your wallet ID","Your wallet ID"
+
