Update customer card informations
Card infos are recorded in customer attribute
Card infos are displayed in front form
This close #8.

--- a/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/app/locale/en_US/Sirateck_Lemonway.csv
@@ -127,4 +127,9 @@
 "Your order will be paid with your registered card after you submit order","Your order will be paid with your registered card after you submit order"
 "Your wallet email","Your wallet email"
 "Your wallet ID","Your wallet ID"
+"Card Num (one clic)","Card Num (one clic)"
+"Card Expiration date (one clic)","Card Expiration date (one clic)"
+"Card type (one clic)","Card type (one clic)"
+"Actual card","Actual card"
+"Expiration date","Expiration date"
 
