--- a/app/locale/fr_FR/Sirateck_Lemonway.csv
+++ b/app/locale/fr_FR/Sirateck_Lemonway.csv
@@ -127,4 +127,9 @@
 "Your order will be paid with your registered card after you submit order","Votre commande sera payée avec votre carte enregistrée dés que vous aurez validé votre commande."
 "Your wallet email","L'email de votre wallet"
 "Your wallet ID","L'ID de votre wallet"
+"Card Num (one clic)","Numéro de la carte enregistrée"
+"Card Expiration date (one clic)","Date d'expiration de la carte enregistrée"
+"Card type (one clic)","Type de carte enregistrée"
+"Actual card","Carte enregistrée"
+"Expiration date","Date expiration"
 
