fix(api): Remove url auto-generated
Add input in configuration for api urls
Up to version 0.1.4
This close #11
Readme also updated

--- a/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/app/locale/en_US/Sirateck_Lemonway.csv
@@ -132,4 +132,8 @@
 "Card type (one clic)","Card type (one clic)"
 "Actual card","Actual card"
 "Expiration date","Expiration date"
+"Webkit Url","Webkit Url"
+"Directkit Url","Directkit Url"
+"Directkit Url Test","Directkit Url Test"
+"Webkit Url Test","Webkit Url Test"
 
