Fix(admin): Remove column statut in wallet admin grid
Up to version 0.1.6
Add some translations

--- a/src/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/src/app/locale/en_US/Sirateck_Lemonway.csv
@@ -136,4 +136,16 @@
 "Directkit Url","Directkit Url"
 "Directkit Url Test","Directkit Url Test"
 "Webkit Url Test","Webkit Url Test"
-
+"Document only received","Document only received"
+"Document checked and accepted","Document checked and accepted"
+"Document checked but not accepted","Document checked but not accepted"
+"Document replaced by another document","Document replaced by another document"
+"Document validity expired","Document validity expired"
+"ID card (UE)","ID card (UE)"
+"Proof of address","Proof of address"
+"RIB","RIB"
+"Passport (UE)","Passport (UE)"
+"Passport (Not UE)","Passport (Not UE)"
+"Residence permit","Residence permit"
+"Kbis","Kbis"
+"Miscellaneous","Miscellaneous"
