--- a/src/app/locale/fr_FR/Sirateck_Lemonway.csv
+++ b/src/app/locale/fr_FR/Sirateck_Lemonway.csv
@@ -136,4 +136,17 @@
 "Directkit Url","Url du service Directkit"
 "Directkit Url Test","Url de test du service Directkit"
 "Webkit Url Test","Url de test du service Webkit"
+"Document only received","Document reçu uniquement"
+"Document checked and accepted","Document vérifié et accepté"
+"Document checked but not accepted","Document vérifié mais pas accepté"
+"Document replaced by another document","Document remplacé par un autre document"
+"Document validity expired","Validité du document expiré"
+"ID card (UE)","Carte d'identité (Zone UE)"
+"Proof of address","Justificatif de domicile"
+"RIB","RIB"
+"Passport (UE)","Passeport (UE)"
+"Passport (Not UE)","Passeport (NON UE)"
+"Residence permit","Carte de séjour"
+"Kbis","Kbis"
+"Miscellaneous","Divers"
 
