Clean orders in pending since xxx minutes

--- a/src/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/src/app/locale/en_US/Sirateck_Lemonway.csv
@@ -148,4 +148,8 @@
 "Passport (Not UE)","Passport (Not UE)"
 "Residence permit","Residence permit"
 "Kbis","Kbis"
-"Miscellaneous","Miscellaneous"
+"Miscellaneous","Miscellaneous"
+"Cancel orders in pendind status","Cancel orders in pendind status"
+"Cancel orders in pending status since more 30 minutes. Useful when a customer don't send his credit card information in hosted page.","Cancel orders in pending status since more 30 minutes. Useful when a customer don't send his credit card information in hosted page."
+"Order canceled automatically by cron because order is pending since %d minutes","Order canceled automatically by cron because order is pending since %d minutes"
+"Transaction Failed. Order was canceled automatically.","Transaction Failed. Order was canceled automatically."
