Add comment in moneyinwebinit params
check for lemonwaymkt configuration to include or not shipping amount in amount commision

--- a/src/app/locale/fr_FR/Sirateck_Lemonway.csv
+++ b/src/app/locale/fr_FR/Sirateck_Lemonway.csv
@@ -66,7 +66,7 @@
 "Lemonway payment method (webkit)","Lemonway - Webkit"
 "Log all queries to and from lemonway API","Log toutes les requêtes entrantes/sortantes de l'API"
 "Mobile Number","Numéro mobile"
-"Money In with Card Id for order #%s","MoneyIn avec Id de carte pour la commande #%s"
+"Oneclic mode (card id: %s)","Mode Oneclic (ID carte: %s)"
 "MoneyOut","Money out"
 "Money out","Money out"
 "Moneyout from Magento module","Moneyout depuis le module magento"
@@ -152,4 +152,6 @@
 "Cancel orders in pendind status","Annule les commandes au statut ""en attente"""
 "Cancel orders in pending status since more 30 minutes. Useful when a customer don't send his credit card information in hosted page.","Annule les commandes au statut ""en attente"" depuis plus de 30 minutes. Utile quand les clients ne valident pas le formulaire de saisie bancaire."
 "Order canceled automatically by cron because order is pending since %d minutes","Commande annulée automatiquement par la tâche planifiée car la commande était en attente depuis plus de %s minutes"
-"Transaction Failed. Order was canceled automatically.","Échec de transaction. Commande annulée automatiquement."
+"Transaction Failed. Order was canceled automatically.","Échec de transaction. Commande annulée automatiquement."
+"Shipping amount in marketplace total","Montant des frais de port dans le total marketplace"
+"If you have cutomized marketplace module to include shipping amount in seller's amount, enable it.","A activer,si vous avez personnalisé le module Marketplace pour inclure le montant des frais de port dans le total marketplace avant le prélèvement de la commission."
