--- a/src/app/locale/en_US/Sirateck_Lemonway.csv
+++ b/src/app/locale/en_US/Sirateck_Lemonway.csv
@@ -66,7 +66,7 @@
 "Lemonway payment method (webkit)","Lemonway payment method (webkit)"
 "Log all queries to and from lemonway API","Log all queries to and from lemonway API"
 "Mobile Number","Mobile Number"
-"Money In with Card Id for order #%s","Money In with Card Id for order #%s"
+"Oneclic mode (card id: %s)","Oneclic mode (card id: %s)"
 "MoneyOut","Money out"
 "Money out","Money out"
 "Moneyout from Magento module","Moneyout from Magento module"
@@ -152,4 +152,6 @@
 "Cancel orders in pendind status","Cancel orders in pendind status"
 "Cancel orders in pending status since more 30 minutes. Useful when a customer don't send his credit card information in hosted page.","Cancel orders in pending status since more 30 minutes. Useful when a customer don't send his credit card information in hosted page."
 "Order canceled automatically by cron because order is pending since %d minutes","Order canceled automatically by cron because order is pending since %d minutes"
-"Transaction Failed. Order was canceled automatically.","Transaction Failed. Order was canceled automatically."
+"Transaction Failed. Order was canceled automatically.","Transaction Failed. Order was canceled automatically."
+"Shipping amount in marketplace total","Shipping amount in marketplace total"
+"If you have cutomized marketplace module to include shipping amount in seller's amount, enable it.","Enable it, if you have cutomized marketplace module to include shipping amount in seller's total before commision calculation."
